# wren

./: .gitignore  README.md  config.example.json  eval.py  generate_data.py  generate_tool_output.py  index.html  mcp_server.py  pyproject.toml  wren.py
.github/workflows/: deploy-pages.yml
adapters/: adapter_config.json
data/: train.jsonl  valid.jsonl
hooks/: wren-compress.sh
tests/: test_training_data.py
